﻿shmuel 26.03.2015 09:34:26 +0200 - build 499

1. Добавлена функция-заглушка NoCommandLine, по аналогии с функциями NoMacro, NoEvent, NoMenuItem.

shmuel 25.03.2015 16:11:10 +0200 - build 498

1. Добавлена возможность загрузки из макрофайлов пользовательских префиксов командной строки.
   Этим занимается новая загрузочная функция 'CommandLine'.

zg 21.03.2015 14:29:00 +0200 - build 497

1. LuaFAR-плагины без ExitFARW, использующие luaplug.c могли падать при выгрузке, если оставались
   не удалённые lua-переменные, в __gc методе которых вызывались функции farapi.

zg 21.03.2015 00:39:48 +0200 - build 496

1. Far 3.0 API 4321

shmuel 19.03.2015 09:18:45 +0200 - build 495

1. Уточнение 494.

shmuel 18.03.2015 20:34:15 +0200 - build 494

1. LuaFAR (библиотека regex): падение при большом количестве captures (несколько десятков) из-за
   отсутствовавшего вызова lua_checkstack.

shmuel 17.03.2015 17:57:24 +0200 - build 493

1. С форума: Запуск lua: mf.postmacro(eval,"F1") приводит к ошибке "bad argument #1 to 'getfenv'
             (invalid level)".

shmuel 15.03.2015 15:48:33 +0200 - build 492

1. LuaFAR (библиотека bit64): устранение зависимости результатов сдвиговых операций при величинах
   сдвига >= 64 от применяемого компилятора.

shmuel 13.03.2015 16:38:56 +0200 - build 491

1. LuaFAR: неправильно работал far.AdvControl("ACTL_GETARRAYCOLOR").

zg 08.03.2015 02:30:10 +0200 - build 490

1. moonscript 0.3.1.

zg 07.03.2015 02:15:16 +0200 - build 489

1. moonscript: issue #177 fix.

zg 05.03.2015 02:31:50 +0200 - build 488

1. moonscript 0.3.0.

shmuel 02.03.2015 19:01:59 +0200 - build 487

1. LuaFAR: убрана функция far.LuafarVersion.

shmuel 21.02.2015 19:30:30 +0200 - build 486

1. Рефакторинг.

shmuel 21.02.2015 00:56:10 +0200 - build 485

1. Рефакторинг.

shmuel 17.02.2015 00:44:37 +0200 - build 484

1. Расширение API в области возвращаемых значений для eval(S,2).

2. Рефакторинг.

shmuel 14.02.2015 16:35:25 +0200 - build 483
