@@ -415,7 +415,8 @@ function mf.eval (str, mode, lang)
     return Eval_FixReturn(yieldcall("eval", macro, key))
   end
 
-  local chunk, params = Shared.loadmacro(lang, str)
+  local ok, env = pcall(getfenv, 3)
+  local chunk, params = Shared.loadmacro(lang, str, ok and env)
   if chunk then
     if mode==1 then return 0 end
     if mode==3 then return "" end
