@@ -119,13 +119,19 @@ end
 local function test_eval()
   assert(eval==mf.eval)
 
+  temp=3
   assert(eval("temp=5+7")==0)
+  assert(temp==12)
+
+  temp=3
   assert(eval("temp=5+7",0,"moonscript")==0)
   assert(eval("temp=5+7",1,"lua")==0)
   assert(eval("temp=5+7",3,"lua")=="")
   assert(eval("temp=5+7",1,"moonscript")==0)
   assert(eval("temp=5+7",3,"moonscript")=="")
+  assert(temp==3)
   assert(eval("getfenv(1).temp=12",0,"moonscript")==0)
+  assert(temp==12)
 
   assert(eval("5",0,"moonscript")==0)
   assert(eval("5+7",1,"lua")==11)
